@@ -17,7 +17,7 @@ SET(JavaScriptCore_INCLUDE_DIRECTORIES
     "${JAVASCRIPTCORE_DIR}/yarr"
     "${JAVASCRIPTCORE_DIR}/wtf"
     "${DERIVED_SOURCES_JAVASCRIPTCORE_DIR}"
-    "${CMAKE_SOURCE_DIR}"
+    "${CMAKE_SOURCE_DIR}/Source"
 )
 
 SET(JavaScriptCore_SOURCES
